Fix staff overflow, adjust textbutton click handler- move to child

--- a/src/components/business_settings/tabs.module.scss
+++ b/src/components/business_settings/tabs.module.scss
@@ -78,6 +78,8 @@
   width: 100%;
   height: 100%;
 
+  overflow-y: auto;
+
   display: flex;
   flex-direction: column;
 
